Fix: Fixed issue with Outcome